Regression: Texture Node add search is broken #106879

Closed
opened 2023-04-13 03:43:09 +02:00 by Sun Kim · 4 comments
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.41

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-12 22:05, hash: d48939f103c0
Worked: 3.5
Caused by cc925b9282

Short description of error
In Texture Node editor, the add search is broken, only lists Reroute and Frame. In earlier 3.6 alpha versions it doesn't even list those two.

TextureNodeSearch.png

Exact steps for others to reproduce the error

  • Go to Texture Node editor
  • Add > Search
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.41 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-12 22:05, hash: `d48939f103c0` Worked: 3.5 Caused by cc925b92828991f42de9c17d04999630033bc23b **Short description of error** In Texture Node editor, the add search is broken, only lists Reroute and Frame. In earlier 3.6 alpha versions it doesn't even list those two. ![TextureNodeSearch.png](/attachments/471275ad-587b-49e8-bcbb-be1e388cb323) **Exact steps for others to reproduce the error** - Go to Texture Node editor - `Add > Search`
Sun Kim added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-04-13 03:43:10 +02:00

These nodes are basically not supported now. It looks like it can just be closed.

These nodes are basically not supported now. It looks like it can just be closed.
Author
Contributor

I believe it's still maintained and getting fixes. I think this should be at least listed, especially it's a recent regression that breaks an important part (search) of the system.

I believe it's still maintained and getting fixes. I think this should be at least listed, especially it's a recent regression that breaks an important part (search) of the system.
Member

Hi, thanks for the report. Can confirm.

Hi, thanks for the report. Can confirm.
Pratik Borhade changed title from Texture Node add search is broken to Regression: Texture Node add search is broken 2023-04-13 15:40:37 +02:00
Member
Caused by cc925b92828991f42de9c17d04999630033bc23b @HooglyBoogly ^
Hans Goudey self-assigned this 2023-04-13 18:22:07 +02:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-04-13 18:22:13 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-14 19:52:26 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106879
No description provided.