Fix #106879: Texture Node add search is broken